--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="style.css" rel="stylesheet">
     <script src="model.js"></script>
     <script src="view.js"></script>
+    <script src="controller.js"></script>
 </head>
 
 <body>
     <div id="app"></div>
 
     <script>
+        let appDiv = document.getElementById('app');
         covid();
+
     </script>
 
 </body>
